modif RetriveRoomsUseCaseTest